force-app/main/default/objects/Service_Resource__c/Service_Resource__c.object-meta.xml
<CustomObject>
    <label>Service Resource1</label>
    <nameField>
        <label>Service Resource</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>