force-app/main/default/objects/Service_Resource__c/fields/Main__c.field-meta.xml
<CustomField>
    <fullName>Main__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main</label>
    <type>Checkbox</type>
</CustomField>