force-app/main/default/objects/Service_Resource__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>