force-app/main/default/objects/Service_Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Last_Modified_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>